--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,18 +1,20 @@
 :root {
-  --ACCENT-CLR: #17374f;
-  --HOVER-OVERLAY-CLR: #7676761a;
-  --PRIMARY-BACKGROUND-CLR: #0d0d0dee;
-  --PRIMARY-FONT-CLR: #acacac;
-  --LIGHT-FONT-CLR: #fff;
-  --SECONDARY-BTN-HOVER-BACKGROUND-CLR: #17374fa2;
+  --ACCENT-CLR: #000;
+  --HOVER-OVERLAY-CLR: #3030307a;
+  --NAVBAR-BACKGROUND-CLR: #0000001a;
+  --PRIMARY-BACKGROUND-CLR: #fff;
+  --PRIMARY-FONT-CLR: #000000;
+  --SECONDARY-FONT-CLR: rgb(255, 255, 255);
+  --SECONDARY-BTN-HOVER-BACKGROUND-CLR: #0000001a;
   --SHADOW-CLR: #000000;
 
-  --BORDER-RADIUS: 4px;
-  --BTN-PADDING-Y: 10px;
-  --BTN-PADDING-X: 18px;
+  --BORDER-RADIUS: 30px;
+  --BTN-PADDING-Y: 1em;
+  --BTN-PADDING-X: 2.5em;
   --HAS-GAP-VALUE: 1rem;
   --HAS-PADDING-VALUE: 1rem;
-  --BTN-INPUT-BORDER-WIDTH: 1px;
+  --BTN-INPUT-BORDER-WIDTH: 2px;
+  --MAIN-PADDING-X: 5em;
 
   --TRANSITION-DURATION: 120ms;
 }
