--- a/src/css/generic.css
+++ b/src/css/generic.css
@@ -37,6 +37,7 @@ img {
 .btn {
   cursor: pointer;
   font-weight: 600;
+  letter-spacing: 1px;
   padding: var(--BTN-PADDING-Y) var(--BTN-PADDING-X);
   text-transform: lowercase;
 }
