--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lobster+Two:wght@400;700&display=swap");
 
 body {
   color: var(--PRIMARY-FONT-CLR);
-  font-family: "IBM Plex Mono", monospace;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
 }
 
