--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,12 +1,12 @@
 :root {
   --ACCENT-CLR: #000;
   --HOVER-OVERLAY-CLR: #3030307a;
-  --NAVBAR-BACKGROUND-CLR: #0000001a;
   --PRIMARY-BACKGROUND-CLR: #fff;
   --PRIMARY-FONT-CLR: #000000;
   --SECONDARY-FONT-CLR: rgb(255, 255, 255);
-  --SECONDARY-BTN-HOVER-BACKGROUND-CLR: #0000001a;
+  --SECONDARY-BACKGROUND-CLR: #0000001a;
   --SHADOW-CLR: #000000;
+  --TODO-BACKGROUND-CLR: #d6d6d6;
 
   --BORDER-RADIUS: 30px;
   --BTN-PADDING-Y: 1em;
@@ -15,6 +15,7 @@
   --HAS-PADDING-VALUE: 1rem;
   --BTN-INPUT-BORDER-WIDTH: 2px;
   --MAIN-PADDING-X: 5em;
+  --TODO-BORDER-RADIUS: 20px;
 
   --TRANSITION-DURATION: 120ms;
 }
