--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,8 +1,10 @@
 :root {
   --ACCENT-CLR: #000;
+  --GREEN-CLR: rgb(21, 129, 39);
   --HOVER-OVERLAY-CLR: #3030307a;
   --PRIMARY-BACKGROUND-CLR: #fff;
   --PRIMARY-FONT-CLR: #000000;
+  --RED-CLR: rgb(221, 10, 10);
   --SECONDARY-FONT-CLR: rgb(255, 255, 255);
   --SECONDARY-BACKGROUND-CLR: #0000001a;
   --SHADOW-CLR: #000000;
@@ -11,11 +13,13 @@
   --BORDER-RADIUS: 30px;
   --BTN-PADDING-Y: 1em;
   --BTN-PADDING-X: 2.5em;
+  --INPUT-PADDING-Y: 1em;
+  --INPUT-PADDING-X: 1.2em;
   --HAS-GAP-VALUE: 1rem;
   --HAS-PADDING-VALUE: 1rem;
   --BTN-INPUT-BORDER-WIDTH: 2px;
   --MAIN-PADDING-X: 5em;
   --TODO-BORDER-RADIUS: 20px;
 
-  --TRANSITION-DURATION: 120ms;
+  --TRANSITION-DURATION: 150ms;
 }
