--- a/src/components/todos_container/css/style.css
+++ b/src/components/todos_container/css/style.css
@@ -1,7 +1,23 @@
 .your-todos-section {
   background: var(--SECONDARY-BACKGROUND-CLR);
   border-radius: var(--BORDER-RADIUS);
-  height: 500px;
-  margin-top: 1em;
+  flex-wrap: wrap;
+  height: 35rem;
+  margin: 1em 0;
+  overflow-y: auto;
   padding: 2em;
+}
+
+.your-todos-section.empty-container {
+  position: relative;
+}
+
+.your-todos-section.empty-container::after {
+  content: "you have no todos saved.";
+  font-weight: 600;
+  opacity: 0.7;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
